# sei-ia

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  GUIA_BUILD_NETWORK.md  Makefile  README.md  airflow.env  autodeployer.dockerfile  changelog_sei-ia_tjrj.txt  default.env  deploy-externo-imgs.sh  deploy-externo.sh  docker-compose-autodeployer.yml  docker-compose-dev.yaml  docker-compose-ext.yaml  docker-compose-healthchecker.yml  docker-compose-prod.yaml  docker-compose.override.yml  docker-compose.yml  healthchecker.dockerfile  insert_row_version_register.sh  known_hosts  litellm_config.template.yaml  local_manager_version.sh  pgvector_all.dockerfile  pyproject.toml  requirements.txt  security_example.env  solr.dockerfile  teste.py
aplicacoes/assistente/: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  assistente.dockerfile  mkdocs.yml  nginx.dockerfile  pyproject.toml  stream_client.py
aplicacoes/assistente/db_init/: init_pgvector.sql  postgresql.conf
aplicacoes/assistente/docs/: index.md  ocr-pdf-escaneado.md
aplicacoes/assistente/docs/agents/: README.md  intent-selector.md  overview.md  question-handler.md  summarizer.md  websearch.md
aplicacoes/assistente/docs/api/: README.md  endpoints.md  examples.md  models.md
aplicacoes/assistente/docs/architecture/: README.md  components.md  overview.md  workflow.md
aplicacoes/assistente/docs/getting-started/: README.md  environment.md  installation.md  quickstart.md
aplicacoes/assistente/docs/integrations/: README.md  azure-openai.md  observability.md  postgresql.md  redis.md  sei-api.md
aplicacoes/assistente/docs/prompts/: README.md  generation-prompts.md  intent-prompts.md  system-prompts.md
aplicacoes/assistente/docs/rag-system/: README.md  auto-indexing.md  embeddings.md  overview.md  retrieval.md
aplicacoes/assistente/scripts/: run_rlm.py
aplicacoes/assistente/sei_ia/: __init__.py  main.py
aplicacoes/assistente/sei_ia/agents/: __init__.py  chat_completion_graph.py  grammar_checker.py  intent_selector_agent.py
aplicacoes/assistente/sei_ia/configs/: __init__.py  gunicorn_conf.py  langfuse_config.py  logging_config.py  nginx.conf  settings_config.py
aplicacoes/assistente/sei_ia/data/: __init__.py  pydantic_models.py
aplicacoes/assistente/sei_ia/middleware/: __init__.py  middleware_custom.py  middleware_exception_handlers.py  middleware_request.py  middleware_timeout.py
aplicacoes/assistente/sei_ia/routers/: __init__.py  feedback.py  healthcheck.py
aplicacoes/assistente/sei_ia/services/: __init__.py  counter.py  validators.py
aplicacoes/assistente/tests/: README.md  cache_example.py  conftest.py
aplicacoes/assistente/tests/e2e/: __init__.py  conftest.py  mocks.py  test_audio_transcription.py  test_chat_error_handling.py  test_chat_gpt_4o_128k.py  test_chat_router_missing_lines.py  test_concorrencia.py  test_document_extraction.py  test_document_process_association.py  test_feedback.py  test_gpt_endpoint.py  test_middleware_exception_handlers.py  test_middleware_request.py  test_middleware_timeout.py  test_p1_critical.py  test_sei_api_errors.py  test_service.py  test_service_rlm.py  test_uploads.py
aplicacoes/assistente/tests/executaveis/: mock_data_rag_complete.json
aplicacoes/assistente/tests/fixtures/: mock_data.py
aplicacoes/assistente/tests/mocks/: __init__.py  test_data_factories.py
aplicacoes/assistente/tests/rag/: conftest.py  mock_data_rag_complete.json  rag_caminho_direto.py  rag_chunks_forcado.py  rag_documentos_completos.py  rag_real_algorithm.py  setup_db.py
aplicacoes/assistente/tests/unit/: __init__.py  conftest.py  test_chat_router_utils.py  test_chunk_extractor.py  test_content_cleaner.py  test_counter.py  test_document_decision.py  test_document_delimiter.py  test_document_pagination.py  test_middleware_is_excluded_url.py  test_model_response.py  test_multi_search_rag.py  test_persist_feedback.py  test_prompt_builders.py  test_question_generator.py  test_rlm_websearch_tool.py  test_speech_to_text.py  test_stream_processor_final.py  test_uploads_processing.py  test_validators.py
aplicacoes/assistente/tests/utils/: __init__.py  in_memory_cache.py  test_helpers.py
aplicacoes/etl-airflow/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  airflow-local.dockerfile  airflow.dockerfile  docker-compose-local-desenv.yml  jobs_api.dockerfile  localconf_run_airflow.sh  mkdocs.yml  pyproject.toml  pytest.ini  readme-old.md
aplicacoes/etl-airflow/docs/: index.md  modules.md
aplicacoes/etl-airflow/docs/etl/: dags-manutencao.md  embeddings.md  index.md  indexacao-documentos.md  indexacao-processos.md
aplicacoes/etl-airflow/docs/getting-started/: environment-variables.md
aplicacoes/etl-airflow/document_extraction/: __init__.py
aplicacoes/etl-airflow/healthcheck/: airflow_scheduler.sh  airflow_triggerer.sh  airflow_webserver.sh  airflow_worker.sh
aplicacoes/etl-airflow/jobs/: __init__.py  api.py  envs.py
aplicacoes/etl-airflow/jobs/api_rest/: __init__.py
aplicacoes/etl-airflow/jobs/dags/: __init__.py  logger.py
aplicacoes/etl-airflow/jobs/db_models/: __init__.py  app_tables.py  async_db_connection.py  embedding.py  repository.py  sei_db_handlers.py  sei_db_handlers.py.backup  solr_handlers.py  solr_select.py
aplicacoes/etl-airflow/jobs/document_extraction/: __init__.py  document_reader.py  text_processor.py
aplicacoes/etl-airflow/jobs/exception_handling/: __init__.py  exceptions.py
aplicacoes/etl-airflow/jobs/scripts_airflow/: __init__.py  clean_dag_runs.py  (+5 more)
aplicacoes/etl-airflow/tests/: test_sei_db_handlers.py
aplicacoes/similaridade/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  api_sei.dockerfile  healthcheck.sh  mkdocs.yml  pyproject.toml  pytest.ini  template_export.sh  template_unset.sh
aplicacoes/similaridade/api_sei/: __init__.py  envs.py  main.py  test.html  utils.py
aplicacoes/similaridade/app_api/: __init__.py  main.py
aplicacoes/similaridade/db_connection/: __init__.py  db_connection.py
aplicacoes/similaridade/docs/: index.md
(+433 files in other folders)
