[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistente"
version = "0.9.0"
description = "Assistente Virtual"
authors = [{name = "Anatel", email = "seiia@anatel.gov.br"}]
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi[standard]==0.115.8",
    "uvicorn==0.30.5",
    "python-dotenv==1.0.1",
    "langchain-core==0.3.33",
    "langchain==0.3.17",
    "langchain-community==0.3.16",
    "langchain-openai==0.3.3",
    "langchain-text-splitters==0.3.5",
    "litellm==1.63.0",
    "tiktoken==0.7.0",
    "openai==1.61.1",
    "pydantic-settings==2.7.1",
    "pydantic==2.9.2",
    "beautifulsoup4==4.12.3",
    "html5lib>=1.1",
    "pymysql>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "pandas==2.2.2",
    "psycopg2-binary==2.9.9",
    "cryptography==44.0.0",
    "pgvector==0.2.5",
    "zeep==4.2.1",
    "langfuse==3.9.3",
    "timeout_decorator==0.5.0",
    "starlette==0.45.3",
    "gunicorn==23.0.0",
    "tabulate==0.9.0",
    "odfpy==1.4.1",
    "openpyxl==3.1.5",
    "python-calamine==0.3.1",
    "func_timeout==4.3.5",
    "backoff==2.2.1",
    "duckduckgo_search==7.3.0",
    "asyncpg==0.30.0",
    "python-settings==0.2.3",
    "langgraph==0.3.21",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.74",
    "langsmith==0.3.45",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "pymupdf>=1.26.3",
    "nest-asyncio>=1.6.0",
    "azure-ai-projects==1.0.0b12",
    "azure-ai-agents==1.0.2",
    "azure-core==1.35.1",
    "azure-core-tracing-opentelemetry==1.0.0b12",
    "azure-identity==1.23.1",
    "azure-storage-blob==12.26.0",
    "msal==1.33.0",
    "msal-extensions==1.3.1",
    "docling>=1.16.0",
    "unstructured[all-docs]>=0.16.0",
    "torch>=2.7.0,<3.0.0",
    "torchvision>=0.22.0,<1.0",
    "pytest==8.4.1",
    "responses==0.25.8",
    "respx==0.21.1",
    "redis[hiredis]==5.0.8",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "async-timeout>=5.0.1",
    "pytest>=6.0",
    "pytest-xdist",
    "coverage==7.11.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "requests-mock",
    "pytest-mock",
    "taskipy",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio==1.2.0",
    "testcontainers>=4.13.2",
]

otel = [
    'Deprecated==1.2.16',
    'importlib_metadata==8.5.0',
    'opentelemetry-api==1.33.1',
    'opentelemetry-distro==0.54b1',
    'opentelemetry-instrumentation==0.54b1',
    'opentelemetry-sdk==1.33.1',
    'opentelemetry-semantic-conventions==0.54b1',
    'opentelemetry-exporter-otlp==1.33.1',
    'opentelemetry-instrumentation-fastapi==0.54b1',
    'opentelemetry-instrumentation-requests==0.54b1',
    'opentelemetry-instrumentation-sqlalchemy==0.54b1',
    'opentelemetry-instrumentation-logging==0.54b1',
    'opentelemetry-instrumentation-httpx==0.54b1',
    'zipp==3.21.0'
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sei_ia*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--cov=sei_ia",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-report=xml",
    "--cov-config=pyproject.toml",
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
branch = true
source = ["sei_ia"]
parallel = true
concurrency = ["multiprocessing", "thread"]
disable_warnings = ["no-data-collected"]
omit = [
    "*/tests/*",
    "*/.conda/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.taskipy.tasks]
pre-commit = """
set -e
ruff check --statistics .
ruff format --check .
coverage run --source=. -m pytest ./tests/unit
coverage report --fail-under=95
coverage run --source=. -m pytest ./tests/integration
coverage report --fail-under=80
"""

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (imports organizados)
    "B",   # flake8-bugbear (pega bugs comuns)
    "UP",  # pyupgrade (mantém sintaxe moderna)
    "SIM", # flake8-simplify (sugere simplificações)
    "C4",  # flake8-comprehensions (otimiza loops)
]

ignore = [
    "E501", # Ignorar tamanho de linha (deixe o formatter cuidar disso)
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Testes podem ter imports após configuração de mocks/fixtures
"tests/**/test_*.py" = ["E402"]
"tests/**/conftest.py" = ["E402"]
"tests/rag/*.py" = ["E402", "SIM105"]  # Scripts de teste RAG usam imports tardios e try-except-pass para cleanup
# Variáveis não usadas em testes podem ser intencionais (debugging, documentação)
"tests/**/*.py" = ["F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Configuração uv para usar PyTorch CPU-only (sem CUDA/nvidia)
# Reduz .venv de ~7.5GB para ~1.5GB
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.2.0",
]
